--- a/frontend/src/app/pre-cadastro/pre-cadastro-form.component.html
+++ b/frontend/src/app/pre-cadastro/pre-cadastro-form.component.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="ui-g-12 ui-md-6">
                         <span class="md-inputfield">
-              <input type="text" name="n_cartao_sus" minlength="15" maxlength="15" mask="999999999999999" pattern="[0-9]+$" [(ngModel)]="preCadastro.numCartaoSus" pInputText/>
+              <input type="text" name="n_cartao_sus" minlength="15" maxlength="15" mask="999999999999999" [(ngModel)]="preCadastro.numCartaoSus" pInputText/>
               <label>Número do Cartao do SUS</label>
             </span>
                     </div>
