--- a/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
+++ b/frontend/src/app/unidade-hospitalar/unidade-hospitalar-form.component.html
@@ -50,7 +50,7 @@
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
               <input type="text" name="cnpj" [(ngModel)]="unidadeHospitalar.cnpj" pInputText maxlength="18" 
-              minlength="14" mask="99.999.999/9999-99" pattern="[0-9]+$" required/>
+              minlength="14"  pattern="[0-9]+$" required/>
               <label>CNPJ *</label>
               <div *ngIf="editForm.controls['cnpj'] && !editForm.controls['cnpj'].valid && (editForm.controls['cnpj'].touched || editForm.submitted)" class="ui-message ui-messages-error">
                 Campo obrigatório!
