BASIS-37211 - Front finalizado e tabela acao pronta

--- a/frontend/src/app/perfil/perfil.component.html
+++ b/frontend/src/app/perfil/perfil.component.html
@@ -6,13 +6,14 @@
       <div class="ui-g">
         <div class="ui-g-12 ui-md-4">
             <span class="md-inputfield">
-              <input type="text" pInputText class="ui-inputtext" #filter/>
-              <label>Filtro</label>
+              <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
+              (keyup.enter)="valueFiltro(elasticQuery.query)" name="filtro"/>
+              <label>Pesquisar</label>
             </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(filter.value)"></button>
+            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="valueFiltro(elasticQuery.query)"></button>
           </div>
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Cadastrar" routerLink="/perfil/new" icon="ui-icon-add"></button>
@@ -23,10 +24,10 @@
           <p-column header="Perfil" field="nomePerfil"></p-column>
           <p-column header="Descrição" field="dsPerfil"></p-column>
         </basis-datatable>
-        <!-- <div class="ui-g-12 ui-md-2">
-            <app-botoes-exportacao resourceName="Perfis" [query]="valueFiltroCampo">
+        <div class="ui-g-12 ui-md-2">
+            <app-botoes-exportacao resourceName="perfil" [query]="valueFiltroCampo">
             </app-botoes-exportacao>  
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
