--- a/frontend/src/app/paciente/paciente.component.html
+++ b/frontend/src/app/paciente/paciente.component.html
@@ -4,16 +4,17 @@
       <h1>Paciente</h1>
       <div class="ui-g">
         <div class="ui-g-12 ui-md-12">
-            <span class="md-inputfield">
-              <input type="text" pInputText class="ui-inputtext" #filter/>
-              <label>Descrição</label>
-            </span>
+          <span class="md-inputfield">
+            <input type="text" pInputText class="ui-inputtext" [(ngModel)]="elasticQuery.value" 
+            (keyup.enter)="valueFiltro(elasticQuery.query)" name="filtro"/>
+            <label>Descrição</label>
+          </span>
         </div>
 
         <div class="ui-g-12 ui-md-3"></div>
         <div class="ui-g-12 ui-md-6">
           <div class="ui-g-12 ui-md-6">
-            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="datatable.refresh(filter.value)"></button>
+            <button pButton type="button" label="Pesquisar" icon="ui-icon-search" (click)="valueFiltro(elasticQuery.query)"></button>
           </div>
           <div class="ui-g-12 ui-md-6">
             <button pButton type="button" label="Cadastrar" routerLink="/paciente/new" icon="ui-icon-add"></button>
@@ -21,13 +22,13 @@
         </div>
         <div class="ui-g-12 ui-md-3"></div>
 
-        <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)"  #datatable [rows]="10" [rowsPerPageOptions]="[5,10,20,30,40,50]" >
+        <basis-datatable [url]="searchUrl" (buttonClick)="datatableClick($event)" #datatable [rows]="10" [rowsPerPageOptions]="[5,10,20,30,40,50]">
           <p-column header="Nome Paciente" field="nomePaciente" [sortable]="true"></p-column>
           <p-column header="RG" field="rg" [sortable]="true" mask="99.999.999-9"></p-column>
           <p-column header="CPF" field="cpf" [sortable]="true"></p-column>
           <p-column header="Sexo" field="sexo" [sortable]="true"></p-column>
           <p-column header="Data de Nascimento" field="dataNascimento" [sortable]="true">
-            <ng-template let-col let-dataNascimento="rowData" pTemplate="body">
+            <ng-template let-col let-dataNascimento="rowData" pTempleate="body">
               {{ dataNascimento[col.field]|date:'dd/MM/y' }}
             </ng-template>
           </p-column>
@@ -35,8 +36,8 @@
           <p-column header="Prontuário" field="prontuario" [sortable]="true"></p-column>
         </basis-datatable>
         <div class="ui-g-12 ui-md-2">
-            <app-botoes-exportacao resourceName="paciente" [query]="valueFiltroCampo">
-            </app-botoes-exportacao>
+          <app-botoes-exportacao resourceName="paciente" [query]="valueFiltroCampo">
+          </app-botoes-exportacao>
         </div>
       </div>
     </div>
