--- a/frontend/src/app/usuario/usuario-detail.component.html
+++ b/frontend/src/app/usuario/usuario-detail.component.html
@@ -39,6 +39,12 @@
             <label>Perfil</label>
           </span>
         </div>
+        <div *ngIf="usuario.especialidade" class="ui-g-12 ui-md-6">
+          <span class="md-inputfield">
+            <input type="text" name="especialidade" pInputText [ngModel]="usuario.especialidade.nome" readonly/>
+            <label>Especialidade</label>
+          </span>
+        </div>
       </div>
       <div class="ui-g">
         <div class="ui-g-12 ui-md-2">
