--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -57,10 +57,19 @@
           <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <Label>Perfil</Label> <br/>
-            <p-listbox [options]="perfils" [(ngModel)]="usuario.perfil" name="perfil" optionLabel="nomePerfil" dataKey="id" [listStyle]="{'max-height':'200px'}">
+              <p-listbox [options]="perfils" (onChange)="trocaPerfil()" [(ngModel)]="usuario.perfil" name="perfil" optionLabel="nomePerfil" dataKey="id" [listStyle]="{'max-height':'200px'}" #medico>
             </p-listbox>
           </span>
           </div>
+
+          <div *ngIf="!(isEdit) || usuario.especialidade || myPerfil.nomePerfil == 'Médico'" [hidden]='esconde' class="ui-g-12 ui-md-6">
+            <span class="md-inputfield">
+              <Label>Especialidade</Label> <br/>
+                <p-listbox [options]="especialidades" [(ngModel)]="usuario.especialidade" name="especialidade" optionLabel="nome" dataKey="id" [listStyle]="{'max-height':'200px'}">
+              </p-listbox>
+            </span>
+          </div>
+
         </div>
         <div class="ui-g">
           <div class="ui-g-12 ui-md-2">
