--- a/frontend/src/app/paciente/paciente-form.component.html
+++ b/frontend/src/app/paciente/paciente-form.component.html
@@ -103,7 +103,7 @@
 
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="emailPrincipal" [(ngModel)]="paciente.emailPrincipal" pInputText/>
+              <input type="text" name="emailPrincipal" [(ngModel)]="paciente.emailPrincipal" (blur)="validaEmail()" pInputText/>
               <label>Email Principal</label>
             </span>
           </div>
@@ -111,7 +111,7 @@
 
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="emailAlternativo" [(ngModel)]="paciente.emailAlternativo" pInputText/>
+              <input type="text" name="emailAlternativo" [(ngModel)]="paciente.emailAlternativo"  (blur)="validaEmail()" pInputText/>
               <label>Email Alternativo</label>
             </span>
           </div>
