BASIS-37211 - Recebendo dados no Backend

--- a/frontend/src/app/perfil/perfil-form.component.html
+++ b/frontend/src/app/perfil/perfil-form.component.html
@@ -23,7 +23,7 @@
           <p-pickList [source]="pega" [target]="coloca"  sourceHeader="Procurar por Funcionalidades" targetHeader="Funcionalidades Selecionadas" [responsive]="true" 
           dragdrop="true" dragdropScope="true"[sourceStyle]="{'height':'300px'}" [targetStyle]="{'height':'300px'}" sourceFilterPlaceholder="Procurar por Funcionalidades" targetFilterPlaceholder="Funcionalidades Selecionadas">
             <ng-template let-acao pTemplate="item">
-                 {{acao.cd_funcionalidade + ' - ' + acao.cd_acao}}
+                 {{acao.nm_funcionalidade + ' - ' + acao.nm_acao}}
             </ng-template>
            </p-pickList>
 
@@ -31,7 +31,7 @@
         </div>
         <div class="ui-g">
           <div class="ui-g-12 ui-md-2">
-            <button pButton type="button" label="Cancelar" (click)="teste()"></button>
+            <button pButton type="button" label="Cancelar"  routerLink="/perfil"></button>
           </div>
           <div class="ui-g-12 ui-md-2">
             <button pButton type="submit" label="Salvar" [disabled]="editForm.form.invalid || isSaving"></button>
