--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -57,13 +57,13 @@
           <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <Label>Perfil</Label> <br/>
-              <p-listbox [options]="perfils" (onChange)="trocaPerfil()" [(ngModel)]="usuario.perfil" name="perfil" optionLabel="nomePerfil" dataKey="id" [listStyle]="{'max-height':'200px'}" #medico>
+              <p-listbox [options]="perfils"  (onChange)="trocaPerfil()" [(ngModel)]="usuario.perfil" name="perfil" optionLabel="nomePerfil" dataKey="id" [listStyle]="{'max-height':'200px'}" #medico>
             </p-listbox>
           </span>
           </div>
           <div class="ui-g-12 ui-md-6">
-              <Label>Unidade Hospitalar</Label> <br/>
-              <p-multiSelect [options]="unidadeHospitalares" [(ngModel)]="usuario.unidadeHospitalar" name="unidadeHospitalar" optionLabel="nome" dataKey="id" label="AAAAAAAAAAAAAAAAA" [listStyle]="{'max-height':'200px'}"></p-multiSelect>
+              <p-multiSelect [options]="unidadeHospitalares"  [(ngModel)]="uhs" name="unidadeHospitalar"  optionLabel="nome" dataKey="id" defaultLabel="Unidade de Saúde" [listStyle]="{'max-height':'200px'}" >
+              </p-multiSelect>       
             </div>
           <div *ngIf="!(isEdit) || usuario.especialidade || myPerfil.nomePerfil == 'Médico'" [hidden]='esconde' class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
