BASIS-39589 - Relacionamento Usuario e UnidadeHospitalar - Alteracao no front

--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -62,8 +62,12 @@
           </span>
           </div>
           <div class="ui-g-12 ui-md-6">
-              <p-multiSelect [options]="unidadeHospitalares"  [(ngModel)]="uhs" name="unidadeHospitalar"  optionLabel="nome" dataKey="id" defaultLabel="Unidade de Saúde" [listStyle]="{'max-height':'200px'}" >
-              </p-multiSelect>       
+            <span >
+                <p-multiSelect [options]="unidadeHospitalares"  [(ngModel)]="uhs" name="unidadeHospitalar"  optionLabel="nome" dataKey="id" defaultLabel="Unidade de Saúde*" [listStyle]="{'max-height':'200px'}" required></p-multiSelect> 
+                <div *ngIf="editForm.controls['unidadeHospitalar'] && !editForm.controls['unidadeHospitalar'].valid && (editForm.controls['unidadeHospitalar'].touched || editForm.submitted)" class="ui-message ui-messages-error ng-star-inserted error-required">
+                    Campo obrigatório!
+                  </div> 
+            </span>
             </div>
           <div *ngIf="!(isEdit) || usuario.especialidade || myPerfil.nomePerfil == 'Médico'" [hidden]='esconde' class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
