BASIS-37211 Correções do Sonar

--- a/frontend/src/app/perfil/perfil-detail.component.html
+++ b/frontend/src/app/perfil/perfil-detail.component.html
@@ -6,7 +6,7 @@
       <div class="ui-g form-group">
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="nomePerfil" pInputText [ngModel]="perfil.nomePerfil" readonly/>
+            <input type="text" name="nomePerfil" pInputText [ngModel]="perfil.nomePerfil" readonly required/>
             <label>Perfil</label>
           </span>
         </div>
