BASIS-37211 - Correções Sonar

--- a/frontend/src/app/acao/acao-detail.component.html
+++ b/frontend/src/app/acao/acao-detail.component.html
@@ -5,13 +5,13 @@
       <div class="ui-g form-group">
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="nm_acao" pInputText [ngModel]="acao.nm_acao" readonly/>
+            <input type="text" name="nmAcao" pInputText [ngModel]="acao.nmAcao" readonly/>
             <label>Nm Acao</label>
           </span>
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="cd_acao" pInputText [ngModel]="acao.cd_acao" readonly/>
+            <input type="text" name="cdAcao" pInputText [ngModel]="acao.cdAcao" readonly/>
             <label>Cd Acao</label>
           </span>
         </div>
