--- a/frontend/src/app/acao/acao-form.component.html
+++ b/frontend/src/app/acao/acao-form.component.html
@@ -7,13 +7,13 @@
           <input type="hidden" name="id" pInputText [(ngModel)]="acao.id" readonly/>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="nm_acao" [(ngModel)]="acao.nm_acao" pInputText/>
+              <input type="text" name="nmAcao" [(ngModel)]="acao.nmAcao" pInputText/>
               <label>Nm Acao</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="cd_acao" [(ngModel)]="acao.cd_acao" pInputText/>
+              <input type="text" name="cdAcao" [(ngModel)]="acao.cdAcao" pInputText/>
               <label>Cd Acao</label>
             </span>
           </div>
