--- a/frontend/src/app/acao/acao.component.html
+++ b/frontend/src/app/acao/acao.component.html
@@ -19,8 +19,8 @@
         </div>
         <basis-datatable [url]="searchUrl" 
           (buttonClick)="datatableClick($event)" #datatable>
-          <p-column header="Nm Acao" field="nm_acao"></p-column>
-          <p-column header="Cd Acao" field="cd_acao"></p-column>
+          <p-column header="Nm Acao" field="nmAcao"></p-column>
+          <p-column header="Cd Acao" field="cdAcao"></p-column>
         </basis-datatable>
       </div>
     </div>
