--- a/frontend/src/app/funcionalidade/funcionalidade-form.component.html
+++ b/frontend/src/app/funcionalidade/funcionalidade-form.component.html
@@ -7,19 +7,19 @@
           <input type="hidden" name="id" pInputText [(ngModel)]="funcionalidade.id" readonly/>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="nm_funcionalidade" [(ngModel)]="funcionalidade.nm_funcionalidade" pInputText/>
+              <input type="text" name="nmFuncionalidade" [(ngModel)]="funcionalidade.nmFuncionalidade" pInputText/>
               <label>Nm Funcionalidade</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="cd_funcionalidade" [(ngModel)]="funcionalidade.cd_funcionalidade" pInputText/>
+              <input type="text" name="cdFuncionalidade" [(ngModel)]="funcionalidade.cdFuncionalidade" pInputText/>
               <label>Cd Funcionalidade</label>
             </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
-              <input type="text" name="st_excluido" [(ngModel)]="funcionalidade.st_excluido" pInputText/>
+              <input type="text" name="stExcluido" [(ngModel)]="funcionalidade.stExcluido" pInputText/>
               <label>St Excluido</label>
             </span>
           </div>
