--- a/frontend/src/app/perfil/perfil-form.component.html
+++ b/frontend/src/app/perfil/perfil-form.component.html
@@ -20,11 +20,11 @@
             </span>
           </div>
           <div class="ui-g-12 ui-md-12">
-          <p-pickList [source]="pega" [target]="coloca" filterBy="nm_funcionalidade" 
+          <p-pickList [source]="pega" [target]="coloca" filterBy="nmFuncionalidade" 
           sourceHeader="Selecionar Funcionalidades" targetHeader="Funcionalidades Selecionadas" [responsive]="true" 
           dragdrop="true" dragdropScope="true"[sourceStyle]="{'height':'300px'}" [targetStyle]="{'height':'300px'}">
             <ng-template let-acao pTemplate="item">
-                 {{acao.nm_funcionalidade + ' - ' + acao.nm_acao}}
+                 {{acao.nmFuncionalidade + ' - ' + acao.nmAcao}}
             </ng-template>
            </p-pickList>
 
