--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -57,13 +57,12 @@
           <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <Label>Perfil</Label> <br/>
-              <p-listbox [options]="perfils"  (onChange)="trocaPerfil()" [(ngModel)]="usuario.perfil" name="perfil" optionLabel="nomePerfil" dataKey="id" [listStyle]="{'max-height':'200px'}" #medico>
-            </p-listbox>
+              <p-dropdown [options]="perfils" (onChange)="trocaPerfil()"  [(ngModel)]="usuario.perfil"  name="perfil"  optionLabel="nomePerfil" [style]="{'max-height':'200px'}" editable="true" [autoWidth]="false" #medico></p-dropdown>
           </span>
           </div>
           <div class="ui-g-12 ui-md-6">
             <span >
-                <p-multiSelect [options]="unidadeHospitalares"  [(ngModel)]="usuario.unidadeHospitalar" name="unidadeHospitalar"  optionLabel="nome" dataKey="id" defaultLabel="Unidade de Saúde*" [listStyle]="{'max-height':'200px'}" required></p-multiSelect> 
+                <p-multiSelect [options]="unidadeHospitalares"  [(ngModel)]="uhs" name="unidadeHospitalar"  optionLabel="nome" dataKey="id" defaultLabel="Unidade de Saúde*" [listStyle]="{'max-height':'200px'}" required></p-multiSelect> 
                 <div *ngIf="editForm.controls['unidadeHospitalar'] && !editForm.controls['unidadeHospitalar'].valid && (editForm.controls['unidadeHospitalar'].touched || editForm.submitted)" class="ui-message ui-messages-error ng-star-inserted error-required">
                     Campo obrigatório!
                   </div> 
@@ -72,7 +71,7 @@
           <div *ngIf="!(isEdit) || usuario.especialidade || myPerfil.nomePerfil == 'Médico'" [hidden]='esconde' class="ui-g-12 ui-md-6">
             <span class="md-inputfield">
               <Label>Especialidade</Label> <br/>
-                <p-listbox [options]="especialidades" [(ngModel)]="usuario.especialidade" name="especialidade" optionLabel="nome" dataKey="id" [listStyle]="{'max-height':'200px'}">
+                <p-listbox [options]="especialidades" [(ngModel)]="usuario.especialidade" name="especialidade" optionLabel="nome" dataKey="id"  >
               </p-listbox>
             </span>
           </div>
