--- a/frontend/src/app/usuario/usuario-form.component.html
+++ b/frontend/src/app/usuario/usuario-form.component.html
@@ -57,7 +57,7 @@
           <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
             <Label>Perfil</Label> <br/>
-              <p-dropdown [options]="perfils" (onChange)="trocaPerfil()"  [(ngModel)]="usuario.perfil"  name="perfil"  optionLabel="nomePerfil" [style]="{'max-height':'200px'}" editable="true" [autoWidth]="false" #medico></p-dropdown>
+              <p-dropdown [options]="perfils" (onChange)="trocaPerfil()"  [(ngModel)]="usuario.perfil"  name="perfil"  optionLabel="nomePerfil" dataKey="id" [style]="{'max-height':'200px'}" editable="true" [autoWidth]="false" #medico></p-dropdown>
           </span>
           </div>
           <div class="ui-g-12 ui-md-6">
