--- a/frontend/src/app/usuario/usuario-detail.component.html
+++ b/frontend/src/app/usuario/usuario-detail.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="ui-g-12 ui-md-6">
           <span class="md-inputfield">
-            <input type="text" name="senha" pInputText [ngModel]="usuario.senha" readonly/>
+            <input type="password" name="senha" pInputText [ngModel]="usuario.senha" readonly/>
             <label>Senha</label>
           </span>
         </div>
